fix for url breaking layout problem (#394)

--- a/static/scss/comment.scss
+++ b/static/scss/comment.scss
@@ -75,6 +75,10 @@ $replyPaddingLeft: 8px;
         color: rgba(0,0,0,.77);
         line-height: 1.3;
         font-size: 15px;
+        overflow-wrap: break-word;
+        word-wrap: break-word;
+        word-break: break-word;
+        hyphens: auto;
 
         &:not(:last-child) {
           margin: 0 0 15px 0;
